@@ -1,12 +1,9 @@
-41434a0e3600a4471e176847fa4483ed *ChangeLog
-01366eb62deeb1337a77053bcc1fe376 *DESCRIPTION
-2e254d8c068ea1ad6db81e9cdfe4956a *NAMESPACE
-10bd05273bc03c78a398761ef81f1eaf *R/guardianr.R
+0d891690cd63b260be6aa8a655c6295b *ChangeLog
+351e6537dcc1c367d71c4f85bcbb96b3 *DESCRIPTION
+ee4a18e5001adf8026ba78976ed34fda *NAMESPACE
+14603432ab86df8785cf2063f981e09f *R/guardianr.R
 e527df91f115fc88bc2ccba02d78516c *inst/CITATION
-55aa57a21ae23b93540eabd07664d66f *man/GuardianR-package.Rd
-128e36dfb2a37b0c1570d07f8526cb65 *man/get_guardian.Rd
-263fb3bf20da56395839b0eefb39396f *man/get_guardian_full.Rd
-f1b93a7f019deeaf0763b8f0b3f6cffc *man/get_json.Rd
-c006dbeee61dc46aadb88759d864203e *man/get_json.nokey.Rd
-30224cf1793beab70fb591b07b6d72cb *man/parse_json_to_df.Rd
-f00354ce2edac33c316db22f70f6619d *man/parse_json_to_df.nokey.Rd
+b19807e654e73deb60eafee4f7dd1a8f *man/GuardianR-package.Rd
+60a51e9575b3018b3ff06bcf9b5eb1d6 *man/get_guardian.Rd
+f9b8c385372b2adf549045a3472b687d *man/get_json.Rd
+ce8cb6cc51f5fa267c6a1528c7b8d56b *man/parse_json_to_df.Rd
