@@ -4,14 +4,14 @@
 Search Guardian API for news articles that match the criteria
 }
 \description{
-The function get_guardian() takes three variables and returns a data frame. The variables are: keyword(s), starting date, and end date.
+The function get_guardian takes four variables (keyword(s), starting date, end date, and API-key) and returns a data frame with 27 columns, with the last column including the full text of the article.
 
-Search takes a single keyword or multiple keywords concatenated with "+" (e.g. "keyword1+keyword2") and also accepts Boolean queries with and/or/not between words to refine searches. For exact phrases and matches encapsulate the keywords in "\%22" (e.g "\%22Death+of+Margaret+Thatcher\%22)".
+Search criteria accepts single or multiple keywords concatenated with "+" (e.g. "keyword1+keyword2"). It also accepts Boolean queries with and/or/not between words to refine searches. For exact phrases and matches, please encapsulate the keywords in \%22 (e.g "\%22Death+of+Margaret+Thatcher\%22").
 
-Guardian API only returns the full text when API-key is provided (see get_guardian_full).
+As of version 0.5, the function get_guardian returns the full text of articles and requires a Guardian API-key. Guardian API-key can be obtained by registering at <http://guardian.mashery.com/>.
 }
 \usage{
-get_guardian(keywords, format = "json", from.date, to.date)
+get_guardian(keywords, format = "json", from.date, to.date, api.key)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -27,9 +27,12 @@ Start date of search.
   \item{to.date}{
 End date of search.
 }
+  \item{api.key}{
+A Guardian API-key is necessery to retrieve the full text of news articles. A Guardian API-key can be obtained by registering at <http://guardian.mashery.com/>.
+}
 }
 \value{
-Returns a data frame with 26 variables. Rows refer to news articles and columns to the news item's data.
+Returns a data frame with 27 variables. Rows refer to news articles and columns to the news item's data.
 }
 \references{
 Information about the Content API is available on Guardian Item Reference Guide (http://www.guardian.co.uk/open-platform/content-api-item-reference-guide).
@@ -39,19 +42,11 @@ Marco Toledo Bastos & Cornelius Puschmann
 }
 \examples{
 ## Not run:
-results <- get_guardian(keywords="thatcher", 
-                        from.date="2013-04-09", 
-                        to.date="2013-04-09")
-## End(Not run)
-
-## Not run:
-keywords <- "margaret+thatcher+death"
-results <- get_guardian(keywords=keywords, 
-                        from.date="2013-04-09", 
-                        to.date="2013-04-09")
+results <- get_guardian("islamic+state", 
+	from.date="2014-09-16", 
+	to.date="2014-09-16", 
+	api.key="3xzg2fk53jcdgaj5tbwqqhcz")
 ## End(Not run)
 }
-% Add one or more standard keywords, see file 'KEYWORDS' in the
-% R documentation directory.
 \keyword{ IO }
 \keyword{ utilities }
