@@ -1,34 +1,0 @@
-\name{get_json.nokey}
-\alias{get_json.nokey}
-%- Also NEED an '\alias' for EACH other topic documented here.
-\title{
-Request json at Guardian API
-}
-\description{
-The function get_json() makes a call at Guardian API to retrieve articles that match the criteria. The function is called by get_guardian and should not be used standalone.
-}
-\usage{
-get_json.nokey(keywords, format = "json", from.date, to.date)
-}
-%- maybe also 'usage' for other objects documented here.
-\arguments{
-  \item{keywords}{
-Keyword to search Guardian API. Exemple: "Thatcher". For multiple keywords use "Margaret+Hilda+Thatcher".
-}
-  \item{format}{
-Specifies format (JSON is default).
-}
-  \item{from.date}{
-Start date of search.
-}
-  \item{to.date}{
-End date of search.
-}
-}
-\author{
-Marco Toledo Bastos & Cornelius Puschmann
-}
-% Add one or more standard keywords, see file 'KEYWORDS' in the
-% R documentation directory.
-\keyword{ IO }
-\keyword{ utilities }
